Made the room a bit smaller

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <a-asset-item id="chefsmes-glb" src="blendermodels/chefsmes.glb"></a-asset-item>
         </a-assets> 
 
-        <!-- surroundings -->>
+        <!-- surroundings -->
 
         <!-- floor -->
-        <a-plane color="#878276" rotation="-90 0 0" position="0 0 0" width="10" height="10"></a-plane>
+        <a-plane color="#878276" rotation="-90 0 0" position="0 0 3.5" width="10" height="10"></a-plane>
         <!-- front wall -->
-        <a-plane color="#d8ddb3" position="0 2 -5" height="4" width="10"></a-plane>
+        <a-plane color="#d8ddb3" position="0 2 -1.5" height="4" width="10"></a-plane>
         <!-- back wall -->
         <a-plane color="#d8ddb3" position="0 2 5" rotation="0 180 0" height="4" width="10"></a-plane>
         <!-- left wall -->
@@ -35,14 +35,14 @@
         <a-entity gltf-model="#aanrecht_block-glb" position="0 0 1" scale="3 1 1"></a-entity>
         <a-entity gltf-model="#raam-glb" position="-5 2 0" scale="1 1.2 1"></a-entity>
 
-        <a-entity gltf-model="#aanrecht_block-glb" position="0 0 -4.5" rotation="0 180 0" scale="5 1 1"></a-entity>
+        <a-entity gltf-model="#aanrecht_block-glb" position="0 0 -1" rotation="0 180 0" scale="5 1 1"></a-entity>
 
-        <!-- koelkast -->>
-        <a-entity gltf-model="#koelkast-glb" position="3 0 -4.5" scale="0.5 0.5 0.5">
+        <!-- koelkast -->
+        <a-entity gltf-model="#koelkast-glb" position="3 0 -1" scale="0.5 0.5 0.5">
         <a-entity gltf-model="#koelkast_deur-glb"></a-entity>
         </a-entity>
 
-        <a-entity gltf-model="#chefsmes-glb" metalness: 1; roughness: 1; rotation="80 110 0" position="1 1.02 -4.2" scale="0.1 0.1 0.1"></a-entity>
+        <a-entity gltf-model="#chefsmes-glb" metalness: 1; roughness: 1; rotation="80 110 0" position="1 1.02 -0.7" scale="0.1 0.1 0.1"></a-entity>
 
         
     </a-scene>
