--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
     <a-scene>
         <a-assets>
-            <a-asset-item id="aanrecht_block-glb" src="blendermodels/aanrecht_block.glb"></a-asset-item>
+            <a-asset-item id="eiland-glb" src="blendermodels/keukeneiland.gltf"></a-asset-item>
             <a-asset-item id="raam-glb" src="blendermodels/raam.glb"></a-asset-item>
             <a-asset-item id="koelkast-glb" src="blendermodels/koelkast.glb"></a-asset-item>
             <a-asset-item id="koelkast_deur-glb" src="blendermodels/koelkast_deur.glb"></a-asset-item>
             <a-asset-item id="chefsmes-glb" src="blendermodels/chefsmes.glb"></a-asset-item>
+            <a-asset-item id="keuken-glb" src="blendermodels/keuken.glb"></a-asset-item>
         </a-assets> 
 
         <!-- surroundings -->
@@ -32,17 +33,18 @@
         <!-- right wall -->
         <a-plane color="#d8ddb3" position="5 2 0" rotation="0 -90 0" height="4" width="10"></a-plane>
 
-        <a-entity gltf-model="#aanrecht_block-glb" position="0 0 1" scale="3 1 1"></a-entity>
+        <a-entity gltf-model="#eiland-glb" position="0 0 1" scale="1 0.9 1"></a-entity>
         <a-entity gltf-model="#raam-glb" position="-5 2 0" scale="1 1.2 1"></a-entity>
+        <a-entity light="type: ambient; intensity: 1" position="0 5 0"></a-entity>
 
-        <a-entity gltf-model="#aanrecht_block-glb" position="0 0 -1" rotation="0 180 0" scale="5 1 1"></a-entity>
+        <a-entity gltf-model="#keuken-glb" light="type: directional" position="0 0 -1.15" rotation="0 180 0" scale="1 0.9 1"></a-entity>
 
         <!-- koelkast -->
         <a-entity gltf-model="#koelkast-glb" position="3 0 -1" scale="0.5 0.5 0.5">
         <a-entity gltf-model="#koelkast_deur-glb"></a-entity>
         </a-entity>
 
-        <a-entity gltf-model="#chefsmes-glb" metalness: 1; roughness: 1; rotation="80 110 0" position="1 1.02 -0.7" scale="0.1 0.1 0.1"></a-entity>
+        <a-entity gltf-model="#chefsmes-glb" metalness: 1; roughness: 1; rotation="90 120 180" position="-1 1.20 0.5" scale="0.1 0.1 0.1"></a-entity>
 
         
     </a-scene>
