licht fix + spotlight concept

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </a-assets> 
 
         <a-camera id="js--camera" cut>
-            <a-cursor id="js--cursor" color="black" geometry = "primitive: ring; radiusInner: 0.025; radiusOuter: 0.03"></a-cursor>
+            <a-cursor id="js--cursor" color="black" geometry = "primitive: ring; radiusInner: 0.025; radiusOuter: 0.03 "></a-cursor>
             <a-entity
                 animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
                 animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 2000; from: 1 1 1; to: 0.1 0.1 0.1"
@@ -37,21 +37,29 @@
         <!-- surroundings -->
 
         <!-- floor -->
-        <a-plane color="#878276" rotation="-90 0 0" position="0 0 3.5" width="10" height="10"></a-plane>
+        <a-plane id="floor" color="#878276" rotation="-90 0 0" position="0 0 3.5" width="10" height="10"></a-plane>
         <!-- front wall -->
         <a-plane color="#d8ddb3" position="0 2 -1.5" height="4" width="10"></a-plane>
         <!-- back wall -->
-        <a-plane color="#d8ddb3" position="0 2 5" rotation="0 180 0" height="4" width="10"></a-plane>
+        <a-plane color="#d8ddb3" position="0 2 8.5" rotation="0 180 0" height="4" width="10"></a-plane>
         <!-- left wall -->
-        <a-plane color="#d8ddb3" position="-5 2 0" rotation="0 90 0" height="4" width="10"></a-plane>
+        <a-plane color="#d8ddb3" position="-5 2 3.5" rotation="0 90 0" height="4" width="10"></a-plane>
         <!-- right wall -->
-        <a-plane color="#d8ddb3" position="5 2 0" rotation="0 -90 0" height="4" width="10"></a-plane>
+        <a-plane color="#d8ddb3" position="5 2 3.5" rotation="0 -90 0" height="4" width="10"></a-plane>
 
-        <a-entity gltf-model="#eiland-glb" position="0 0 1" scale="1 0.9 1"></a-entity>
+        <a-entity id="eiland" gltf-model="#eiland-glb" position="0 0 1" scale="1 0.9 1"></a-entity>
         <a-entity gltf-model="#raam-glb" position="-5 2 0" scale="1 1.2 1"></a-entity>
-        <a-entity light="type: ambient; intensity: 1" position="0 5 0"></a-entity>
+        <a-entity light="type: ambient; intensity: 0.5" position="0 3 10"></a-entity>
 
-        <a-entity gltf-model="#keuken-glb" light="type: directional" position="0 0 -1.15" rotation="0 180 0" scale="1 0.9 1"></a-entity>
+        <!--licht-->>
+        <a-entity light="type: spot; intensity: 0.3; angle: 45; target: #focus;" scale="0.1 0.1 0.1" position="0 3 15"></a-entity>
+        <a-entity light="type: spot; intensity: 0.3; angle: 45; target: #focus;" scale="0.1 0.1 0.1" position="0 3 -15"></a-entity>
+        <a-entity light="type: spot; intensity: 0.3; angle: 45; target: #focus;" scale="0.1 0.1 0.1" position="-15 3 0"></a-entity>
+        <a-entity light="type: spot; intensity: 0.3; angle: 45; target: #focus;" scale="0.1 0.1 0.1" position="15 3 0"></a-entity>
+
+        <a-entity id="focus" position="0 2 0"></a-entity>
+
+        <a-entity gltf-model="#keuken-glb" position="0 0 -1.15" rotation="0 180 0" scale="1 0.9 1"></a-entity>
 
         <!-- koelkast -->
         <a-entity gltf-model="#koelkast-glb" position="3 0 -1" scale="0.5 0.5 0.5">
@@ -60,7 +68,10 @@
 
         <a-entity gltf-model="#chefsmes-glb" metalness: 1; roughness: 1; rotation="90 120 180" position="-1 1.20 0.5" scale="0.1 0.1 0.1"></a-entity>
 
+        <!--spotlight voor snijplank + snijplank-->
+        
         <a-box id="snijplank" color="green" scale="0.5 0.01 0.5" position="1 1.1 1">
+            <a-entity light="type: spot; color: #45B3E0; intensity: 0.3; angle: 5; target: #snijplank;" scale="0.1 0.1 0.1" position="0 300 0"></a-entity>
             <a-box id="tomato" color="red" scale="0.5 50 0.5"></a-box>
         </a-box>
 
