--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <!--spotlight voor snijplank + snijplank-->
         
-        <a-box id="snijplank" color="green" scale="0.5 0.01 0.5" position="0 1.14 1">
+        <a-box id="snijplank" class="js--interact js--pickup" color="green" scale="0.5 0.01 0.5" position="0 1.14 1">
             <a-box id="tomato" color="red" scale="0.5 50 0.5"></a-box>
             <a-entity light="type: spot; color: #45B3E0; intensity: 0.3; angle: 7; target: #snijplank;" scale="0.1 0.1 0.1" position="0 300 0"></a-entity>
         </a-box>
