--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="js/pickup.js"></script>
+    <script src="js/cut.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lekker Koken</title>
 </head>
@@ -71,8 +72,9 @@
 
         <a-box cut id="snijplank" class=" js--placeholder js--interact" height="0.1" width="0.3" color="green" position="1 1.17137 1">
         </a-box>
-        <a-sphere class="js--pickup js--interact" height="0.04" radius="0.2" color="red" position="0 1.15367 0.9"></a-sphere>
-        <a-cylinder class="js--pickup js--interact" id="burger" height="0.04" radius="0.2" position="-0.02897 1.18912 0.62695" color="brown"></a-cylinder>
+
+        <a-sphere class="js--pickup js--interact tomaat" height="0.04" radius="0.2" color="red" position="0 1.15367 0.9"></a-sphere>
+        <a-cylinder class="js--pickup js--interact burger" height="0.04" radius="0.2" position="-0.02897 1.18912 0.62695" color="brown"></a-cylinder>
         
 
         
