--- a/level1.html
+++ b/level1.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <a-scene>
+    <a-scene renderer="colorManagement= true;">
         <a-assets>
             <a-asset-item id="eiland-glb" src="blendermodels/keukeneiland.gltf"></a-asset-item>
             <a-asset-item id="raam-glb" src="blendermodels/raam.glb"></a-asset-item>
@@ -20,6 +20,8 @@
             <a-asset-item id="koelkast_deur-glb" src="blendermodels/koelkast_deur.glb"></a-asset-item>
             <a-asset-item id="chefsmes-glb" src="blendermodels/chefsmes.glb"></a-asset-item>
             <a-asset-item id="keuken-glb" src="blendermodels/keuken.glb"></a-asset-item>
+            <a-asset-item id="tomaat-glb" src="blendermodels/tomato.glb"></a-asset-item>
+            <a-asset-item id="tomaat_stengel-glb" src="blendermodels/tomatostengel.glb"></a-asset-item>
         </a-assets> 
 
         <a-camera id="js--camera">
@@ -57,7 +59,12 @@
         <a-entity gltf-model="#koelkast_deur-glb"></a-entity>
         </a-entity>
 
-        <a-entity pickup class="js--interact js--pickup" gltf-model="#chefsmes-glb" metalness: 1; roughness: 1; rotation="90 120 180" position="-1 1.20 0.5" scale="0.1 0.1 0.1"></a-entity>
+        <!-- Food contents -->
+        <a-entity pickup class="js--interact js--pickup" id="js--tomaat" gltf-model="#tomaat-glb" scale="0.03 0.03 0.03" position="1 1.20 0.5">
+            <a-entity gltf-model=#tomaat_stengel-glb></a-entity>
+        </a-entity>
+
+        <a-entity pickup class="js--interact js--pickup" id="mes" gltf-model="#chefsmes-glb" metalness: 1; roughness: 1; rotation="90 120 180" position="-1 1.20 0.5" scale="0.1 0.1 0.1"></a-entity>
     </a-scene>
 </body>
 
