--- a/level1.html
+++ b/level1.html
@@ -47,11 +47,11 @@
         <!-- front wall -->
         <a-plane color="#d8ddb3" position="0 2 -1.5" height="4" width="10"></a-plane>
         <!-- back wall -->
-        <a-plane color="#d8ddb3" position="0 2 5" rotation="0 180 0" height="4" width="10"></a-plane>
+        <a-plane color="#d8ddb3" position="0 2 8.5" rotation="0 180 0" height="4" width="10"></a-plane>
         <!-- left wall -->
-        <a-plane color="#d8ddb3" position="-5 2 0" rotation="0 90 0" height="4" width="10"></a-plane>
+        <a-plane color="#d8ddb3" position="-5 2 3.5" rotation="0 90 0" height="4" width="10"></a-plane>
         <!-- right wall -->
-        <a-plane color="#d8ddb3" position="5 2 0" rotation="0 -90 0" height="4" width="10"></a-plane>
+        <a-plane color="#d8ddb3" position="5 2 3.5" rotation="0 -90 0" height="4" width="10"></a-plane>
 
         <a-entity gltf-model="#eiland-glb" position="0 0 1" scale="1 0.9 1"></a-entity>
         <a-entity gltf-model="#raam-glb" position="-5 2 0" scale="1 1.2 1"></a-entity>
@@ -65,7 +65,7 @@
 
         <a-entity id="focus" position="0 2 0"></a-entity>
 
-        <a-entity gltf-model="#keuken-glb" light="type: directional" position="0 0 -1.15" rotation="0 180 0" scale="1 0.9 1"></a-entity>
+        <a-entity gltf-model="#keuken-glb" position="0 0 -1.15" rotation="0 180 0" scale="1 0.9 1"></a-entity>
 
         <!-- Fridge -->
         <a-entity gltf-model="#koelkast-glb" position="3 0 -1" scale="0.5 0.5 0.5">
