--- a/level1.html
+++ b/level1.html
@@ -56,6 +56,9 @@
         <!-- right wall -->
         <a-plane color="#d8ddb3" position="5 2 0" rotation="0 -90 0" height="4" width="10"></a-plane>
 
+        <!-- dummy entity -->
+        <a-entity class="js--pickup"></a-entity>
+
         <a-entity gltf-model="#eiland-glb" position="0 0 1" scale="1 0.9 1"></a-entity>
         <a-entity gltf-model="#raam-glb" position="-5 2 0" scale="1 1.2 1"></a-entity>
         <a-entity light="type: ambient; intensity: 0.5" position="0 3 10"></a-entity>
@@ -77,7 +80,7 @@
 
         <!-- Food contents -->
         <a-entity pickup class="js--interact js--pickup js--cutable" id="js--tomato" gltf-model="#tomaat-glb" scale="0.03 0.03 0.03" position="1 1.20 0.5">
-            <!-- <a-entity gltf-model=#tomaat_stengel-glb></a-entity> -->
+            <a-entity gltf-model=#tomaat_stengel-glb></a-entity>
         </a-entity>
 
         <a-entity pickup class="js--placeholder js--interact" gltf-model="#plate-glb" position="-0.5 1.14 0.55" scale="0.5 0.5 0.5"></a-entity>
@@ -88,7 +91,7 @@
 
         <!--ingredienten-->
         <a-sphere class="js--pickup js--interact js--cutable" height="0.04" radius="0.2" color="red" position="0 1.15367 0.9"></a-sphere>
-        <a-entity pickup class="js--interact js--pickup" id="broodje" gltf-model="#broodje-glb" position="-1 1.14 0.5" scale="0.3 0.3 0.3"></a-entity>
+        <a-entity pickup class="js--interact js--pickup js--cutable" id="js--broodje" gltf-model="#broodje-glb" position="-1 1.14 0.5" scale="0.3 0.3 0.3"></a-entity>
         <a-entity pickup class="js--interact js--pickup" id="slablaadje" gltf-model="#slablaadje-glb" position="1 1.14 1.4" scale="0.3 0.3 0.3"></a-entity>
         <a-entity pickup class="js--interact js--pickup burger" id="burger" gltf-model="#burger-glb" position="0.5 1.14 1.4" scale="0.3 0.3 0.3"></a-entity>
         <a-cylinder class="js--pickup js--interact" height="0.04" radius="0.2" position="-0.02897 1.18912 0.62695" color="brown"></a-cylinder>
