fixed using dummy entity

--- a/level1.html
+++ b/level1.html
@@ -56,7 +56,7 @@
         <!-- right wall -->
         <a-plane color="#d8ddb3" position="5 2 0" rotation="0 -90 0" height="4" width="10"></a-plane>
 
-        <!-- dummy entity -->
+        <!-- dummy entity zorgt ervoor dat 1ste in array niet meerdere keren clickt zonder reden-->
         <a-entity class="js--pickup"></a-entity>
 
         <a-entity gltf-model="#eiland-glb" position="0 0 1" scale="1 0.9 1"></a-entity>
