--- a/level1.html
+++ b/level1.html
@@ -63,7 +63,7 @@
         <a-entity gltf-model="#raam-glb" position="-5 2 0" scale="1 1.2 1"></a-entity>
         <a-entity light="type: ambient; intensity: 0.5" position="0 3 10"></a-entity>
         
-        <!--licht-->>
+        <!--licht-->
         <a-entity light="type: spot; intensity: 0.3; angle: 45; target: #focus;" scale="0.1 0.1 0.1" position="0 3 15"></a-entity>
         <a-entity light="type: spot; intensity: 0.3; angle: 45; target: #focus;" scale="0.1 0.1 0.1" position="0 3 -15"></a-entity>
         <a-entity light="type: spot; intensity: 0.3; angle: 45; target: #focus;" scale="0.1 0.1 0.1" position="-15 3 0"></a-entity>
@@ -86,12 +86,11 @@
         <a-entity pickup class="js--placeholder js--interact" gltf-model="#plate-glb" position="-0.5 1.14 0.55" scale="0.5 0.5 0.5"></a-entity>
 
         <!--snijplank en mes-->
-        <a-entity pickup class="js--interact js--pickup" id="js--knife" gltf-model="#chefsmes-glb" metalness: 1; roughness: 0; rotation="76 -72 -1" position="0.3 1.196 0.475" scale="0.1 0.1 0.1"></a-entity>
+        <a-entity pickup onclick="pickup()" class="js--interact js--pickup" id="js--knife" gltf-model="#chefsmes-glb" metalness: 1; roughness: 0; rotation="76 -72 -1" position="0.3 1.196 0.475" scale="0.1 0.1 0.1"></a-entity>
         <a-entity pickup place class="js--placeholder js--interact" id="js--cuttingBoard" gltf-model="#snijplank-glb" rotation="0 90 0" position="0.6 1.16 0.6" scale="0.35 0.35 0.35"></a-entity>
 
         <!--ingredienten-->
-        <a-sphere class="js--pickup js--interact js--cutable" height="0.04" radius="0.2" color="red" position="0 1.15367 0.9"></a-sphere>
-        <a-entity pickup class="js--interact js--pickup js--cutable" id="js--broodje" gltf-model="#broodje-glb" position="-1 1.14 0.5" scale="0.3 0.3 0.3"></a-entity>
+        <a-entity pickup class="js--interact js--pickup" id="js--bun" gltf-model="#broodje-glb" position="-1 1.14 0.5" scale="0.3 0.3 0.3"></a-entity>
         <a-entity pickup class="js--interact js--pickup" id="slablaadje" gltf-model="#slablaadje-glb" position="1 1.14 1.4" scale="0.3 0.3 0.3"></a-entity>
         <a-entity pickup class="js--interact js--pickup burger" id="burger" gltf-model="#burger-glb" position="0.5 1.14 1.4" scale="0.3 0.3 0.3"></a-entity>
         <a-cylinder class="js--pickup js--interact" height="0.04" radius="0.2" position="-0.02897 1.18912 0.62695" color="brown"></a-cylinder>
