--- a/level1.html
+++ b/level1.html
@@ -24,6 +24,7 @@
             <a-asset-item id="snijplank-glb" src="blendermodels/snijplank.glb"></a-asset-item>
             <a-asset-item id="tomaat-glb" src="blendermodels/tomaat.glb"></a-asset-item>
             <a-asset-item id="ketchup-glb" src="blendermodels/ketchup.glb"></a-asset-item>
+            <a-asset-item id="pan-glb" src="blendermodels/pan.glb"></a-asset-item>
             
             
             <!--hamburger-->
@@ -87,6 +88,9 @@
         <a-entity pickup class="js--interact js--pickup" id="burger" gltf-model="#burger-glb" position="0.5 1.14 1.4" scale="0.3 0.3 0.3"></a-entity>
         <a-entity pickup class="js--interact js--pickup" id="tomaat" gltf-model="#tomaat-glb" position="0 1.14 1.4" scale="0.05 0.05 0.05"></a-entity>
         <a-entity pickup class="js--interact js--pickup" id="ketchup" gltf-model="#ketchup-glb" position="0.3 1.14 1.4" scale="0.05 0.05 0.05"></a-entity>
+        <a-entity pickup class="js--interact js--pickup" id="olie" gltf-model="#ketchup-glb" position="0.6 1.14 1.4" scale="0.05 0.05 0.05"></a-entity>
+
+        <a-entity pickup class="js--interact" id="pan" gltf-model="#pan-glb" position="0.53 1.18 -1" scale="1 0.3 1" rotation="0 270 0"></a-entity>
 
     </a-scene>
 </body>
