--- a/level1.html
+++ b/level1.html
@@ -29,6 +29,8 @@
             <a-asset-item id="ketchup-glb" src="blendermodels/ketchup.glb"></a-asset-item>
             <a-asset-item id="olie-glb" src="blendermodels/olie.glb"></a-asset-item>
             <a-asset-item id="pan-glb" src="blendermodels/pan.glb"></a-asset-item>
+            <a-asset-item id="bovenkantbroodje-glb" src="blendermodels/broodje_bovenkant.glb"></a-asset-item>
+            <a-asset-item id="onderkantbroodje-glb" src="blendermodels/broodje_onderkant.glb"></a-asset-item>
             
             
             <!--hamburger-->
@@ -93,7 +95,7 @@
         <a-entity class="js--placeholder js--interact" gltf-model="#plate-glb" position="-0.5 1.14 0.55" scale="0.5 0.5 0.5"></a-entity>
 
         <!--snijplank en mes-->
-        <a-entity pickup class="js--interact js--pickup" id="js--knife" gltf-model="#chefsmes-glb" metalness: 1; roughness: 0; rotation="76 -72 -1" position="0.3 1.196 0.475" scale="0.1 0.1 0.1"></a-entity>
+        <a-entity pickup class="js--interact js--pickup" id="mes" gltf-model="#chefsmes-glb" metalness: 1; roughness: 0; rotation="90 -90 0" position="0.146 1.155 0.475" scale="0.1 0.1 0.1"></a-entity>
         <a-entity place class="js--placeholder js--interact" id="js--cuttingBoard" gltf-model="#snijplank-glb" rotation="0 90 0" position="0.6 1.16 0.6" scale="0.35 0.35 0.35"></a-entity>
 
         <!--ingredienten-->
@@ -103,6 +105,10 @@
         <a-entity pickup class="js--interact js--pickup" id="tomaat" gltf-model="#tomaat-glb" position="0 1.14 1.4" scale="0.05 0.05 0.05"></a-entity>
         <a-entity pickup class="js--interact js--pickup" id="ketchup" gltf-model="#ketchup-glb" position="0.3 1.14 1.4" scale="0.05 0.05 0.05"></a-entity>
         <a-entity pickup class="js--interact js--pickup" id="olie" gltf-model="#olie-glb" position="0.6 1.14 1.4" scale="0.05 0.05 0.05"></a-entity>
+        <a-entity pickup class="js--interact js--pickup" id="gesnedenbroodje" scale="0.3 0.3 0.3" position="0.6 1.34 0.6" rotation="0 0 90" visible="false">
+            <a-entity class="js--interact js--pickup" id="bovenkantbroodje" gltf-model="#bovenkantbroodje-glb" position="0 0.06 0" scale="1.05 1.05 1.05"></a-entity>
+            <a-entity class="js--interact js--pickup" id="onderkantbroodje" gltf-model="#onderkantbroodje-glb" position="0 -0.06 0"></a-entity>
+        </a-entity>
 
         <a-entity pickup class="js--interact" id="pan" gltf-model="#pan-glb" position="0.53 1.18 -1" scale="1 0.3 1" rotation="0 270 0"></a-entity>
 
