--- a/level1.html
+++ b/level1.html
@@ -95,10 +95,13 @@
         <a-entity pickup class="js--interact js--pickup" id="tomaat" gltf-model="#tomaat-glb" position="0 1.14 1.4" scale="0.05 0.05 0.05"></a-entity>
         <a-entity pickup class="js--interact js--pickup" id="ketchup" gltf-model="#ketchup-glb" position="0.3 1.14 1.4" scale="0.05 0.05 0.05"></a-entity>
         <a-entity pickup class="js--interact js--pickup" id="olie" gltf-model="#olie-glb" position="0.6 1.14 1.4" scale="0.05 0.05 0.05"></a-entity>
-
         <a-entity pickup id="pan" gltf-model="#pan-glb" position="0.53 1.14 -1" scale="1 0.3 1" rotation="0 -20 0"></a-entity>
 
         <a-image cats id="cat" src="" position="4.9 2 1" rotation="0 90 0"></a-image>
+     
+            <a-plane id="tv" rotation="0 180 0" material="color: white" height="1" width="2" position="0 2 3" wrapCount="100"></a-entity>         
+   
+       
     </a-scene>
 </body>
 </html>
